[package]
name = "deno_plugin_test"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
deno_ast = { version = "1.0.1", features = ["transpiling"] }
deno_core = "0.264.0"
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
deno_core = "0.264.0"
